golden/error/json_function.test
// Note, .len is an unserializable function, we don't call it!
"frobnicator".len

# output:
 --> stdin:2:0
  |
2 | "frobnicator".len
  | ^~~~~~~~~~~~~~~~~
Error: Functions cannot be exported as json.
